--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <script
+      src="https://kit.fontawesome.com/7a67359ae7.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Sip Happens!</title>
   </head>
   <body>
     <div id="root"></div>
